--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-      - cron: "0 6,12,18 * * *"
+    - cron: "0 6,12,18 * * *"
 
 jobs:
   autogreen:
@@ -21,7 +21,7 @@ jobs:
       - name: Auto green
         run: |
           git config --local user.email "451513890@qq.com"
-          git config --local user.name "Dasrio"
+          git config --local user.name "quyanqiu"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
           git commit --allow-empty -m "a commit a day keeps your girlfriend away"
